#19 - for partners - flex wrap fix

--- a/src/screens-content/for-partners/for-partners.module.scss
+++ b/src/screens-content/for-partners/for-partners.module.scss
@@ -1,15 +1,18 @@
 .container {
   padding: 2rem 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .card {
   padding: 1rem;
+  flex: 1;
 }
 
 .image {
   border-radius: 1rem;
+
 }
 
 .title {
